=================================================================
======= CHANGE LOG MAPPERS PARA SISTEMA FERRETERO ===============
=================================================================

// 05-03-2019

ALTER TABLE CUENTAS
ADD CONSTRAINT UNIQUE_RUT UNIQUE(RUT);

ALTER TABLE PERSONAS DROP COLUMN RUT;

ALTER TABLE PERSONAS
ADD CONSTRAINT UNIQUE_CI UNIQUE (CEDULA);


// 04-03-2019

ALTER TABLE CATEGORIASCLIENTE DROP COLUMN ACTIVA.

CREATE TABLE CLIENTESCONTADO
(
	CODIGO INT IDENTITY(10,1) PRIMARY KEY,
	CEDULA VARCHAR(8) UNIQUE,
	RUT VARCHAR(12) UNIQUE,
	DIRECCION VARCHAR(200),
	TELEFONO VARCHAR(9)
)

CREATE TABLE VENTASCONTADO
(
	NUMERO INT NOT NULL,
	SERIE VARCHAR(10) NOT NULL,
	CLIENTECONTADO INT NOT NULL,
	PRIMARY KEY(NUMERO,SERIE),
	FOREIGN KEY(NUMERO,SERIE) REFERENCES VENTAS(NUMERO,CODSERIE),
	FOREIGN KEY(CLIENTECONTADO) REFERENCES CLIENTESCONTADO(CODIGO)
)

// 03-03-2019

MODIFICACION EN LA BASE DE DATOS

ALTER TABLE ARTICULOS ADD COSTO DECIMAL(18,2) NOT NULL DEFAULT 1
ALTER TABLE ARTICULOS ADD GANANCIA DECIMAL(18,2) NOT NULL DEFAULT 20
ALTER TABLE ARTICULOS ADD IVA DECIMAL(18,2) NOT NULL DEFAULT 22
DROP TABLE ARTICULOPRECIOS
ALTER TABLE TARIFAS ADD CARGO DECIMAL(18,2) NOT NULL DEFAULT 10
-
Reestructuracion de la clase Articulo
+Propiedad Ganancia
+Propiedad Iva
+Propiedad Costo
+Metodo Precio (Calcula Costo + Iva + Ganancia) Ej. Articulo.Precio();
+Metodo Precio (Calcula Costo + Iva + Ganancia + Tarifa -> Cargo) Ej. Articulo.Precio(Tarifa);

Cambios en la Clase Tarifa
Se agrego propiedad Cargo.

ALTER TABLE PERSONAS ADD FOTO IMAGE DEFAULT 0X

Permite el Alta de clientes(Personas)


// 01-03-2019

1- Agregada la funcionalidad de obtener cliente y sus cuentas mediantes Codigo (Interno), Cedula o rut.

